--- a/_notebooks/2023-12-14-Class_6_Crowdsourcing.ipynb
+++ b/_notebooks/2023-12-14-Class_6_Crowdsourcing.ipynb
@@ -110,7 +110,16 @@
    "metadata": {},
    "source": [
     "### Homework:\n",
-    "\n"
+    "\n",
+    "Please answer in complete sentences and explain in detail. \n",
+    "\n",
+    "1. Explain the role of data crowdsourcing in machine learning projects. Provide an example of an application where image labeling by a crowd contributes to the improvement of machine learning models.\n",
+    "\n",
+    "2. Compare and contrast the benefits and challenges of data crowdsourcing with regard to tasks like sentiment analysis and data verification. How does the diversity of contributors enhance the overall quality of the collected data?\n",
+    "\n",
+    "3. Choose an open-source project mentioned in the examples, such as the Linux operating system or WordPress. Discuss the significance of global collaboration in the development of open-source software. Highlight one specific advantage and one challenge faced by open-source projects.\n",
+    "\n",
+    "4. In microtask crowdsourcing, tasks are broken down into small units for contributors to complete. Explain how platforms like Amazon Mechanical Turk utilize microtask crowdsourcing. Discuss one advantage and one challenge associated with the microtask approach."
    ]
   }
  ],
