changing images and inserting image

--- a/_notebooks/2023-12-14-Class_6_Crowdsourcing.ipynb
+++ b/_notebooks/2023-12-14-Class_6_Crowdsourcing.ipynb
@@ -21,6 +21,8 @@
    "source": [
     "# Big Idea 5.4: Crowd-sourcing\n",
     "\n",
+    "![ crowdsourcing ](crowdsourcing.jpg)\n",
+    "\n",
     "### What is Crowd-sourcing?\n",
     "\n",
     "Crowd-sourcing is a way of getting help, ideas, or contributions from a large group of people, often through the internet. Instead of relying on a few experts or individuals, crowd-sourcing taps into the collective knowledge, skills, and efforts of a diverse crowd to solve problems, gather information, or create content. This is one way of preventing Computer Bias. \n",
