add homework question

--- a/_notebooks/2023-12-14-Class_6_Crowdsourcing.ipynb
+++ b/_notebooks/2023-12-14-Class_6_Crowdsourcing.ipynb
@@ -125,7 +125,9 @@
     "\n",
     "3. Choose an open-source project mentioned in the examples, such as the Linux operating system or WordPress. Discuss the significance of global collaboration in the development of open-source software. Highlight one specific advantage and one challenge faced by open-source projects.\n",
     "\n",
-    "4. In microtask crowdsourcing, tasks are broken down into small units for contributors to complete. Explain how platforms like Amazon Mechanical Turk utilize microtask crowdsourcing. Discuss one advantage and one challenge associated with the microtask approach."
+    "4. In microtask crowdsourcing, tasks are broken down into small units for contributors to complete. Explain how platforms like Amazon Mechanical Turk utilize microtask crowdsourcing. Discuss one advantage and one challenge associated with the microtask approach.\n",
+    "\n",
+    "5. Explore Kaggle and find a database that would be useful for a CPT Project idea you have. Briefly discuss its potential purpose in your project. (1-2 sentences)"
    ]
   }
  ],
