--- a/_notebooks/2023-12-14-Class_6_Crowdsourcing.ipynb
+++ b/_notebooks/2023-12-14-Class_6_Crowdsourcing.ipynb
@@ -21,7 +21,7 @@
    "source": [
     "# Big Idea 5.4: Crowd-sourcing\n",
     "\n",
-    "![ crowdsourcing ](crowdsourcing.jpg)\n",
+    "![Crowdsourcing](./crowdsourcing.jpg)\n",
     "\n",
     "### What is Crowd-sourcing?\n",
     "\n",
