--- a/_notebooks/2023-12-14-Class_6_Crowdsourcing.ipynb
+++ b/_notebooks/2023-12-14-Class_6_Crowdsourcing.ipynb
@@ -21,11 +21,13 @@
    "source": [
     "# Big Idea 5.4: Crowd-sourcing\n",
     "\n",
-    "![Crowdsourcing](./crowdsourcing.jpg)\n",
+    "![Crowdsourcing](https://files.catbox.moe/u9c5bk.jpeg)\n",
     "\n",
     "### What is Crowd-sourcing?\n",
     "\n",
     "Crowd-sourcing is a way of getting help, ideas, or contributions from a large group of people, often through the internet. Instead of relying on a few experts or individuals, crowd-sourcing taps into the collective knowledge, skills, and efforts of a diverse crowd to solve problems, gather information, or create content. This is one way of preventing Computer Bias. \n",
+    "\n",
+    "![Crowdsourcing Types](https://files.catbox.moe/9efbro.webp)\n",
     "\n",
     "### Types of Crowd-sourcing\n",
     "\n",
@@ -74,7 +76,7 @@
     "\n",
     "The benefits of open source development include fostering community collaboration, rapid innovation through contributions, and promoting transparency as users can inspect, modify, and distribute the source code. Challenges include coordinating contributions from a diverse community, addressing maintainer burnout, and ensuring compliance with project licensing terms. Despite these challenges, open source development remains a powerful model for creating and maintaining software that is both innovative and openly accessible.\n",
     "\n",
-    "![crowdsourcing1](crowdsourcing1.jpg)"
+    "![crowdsourcing1](https://files.catbox.moe/kllfkj.jpeg)"
    ]
   },
   {
@@ -108,7 +110,7 @@
     "\n",
     "Crowdsourcing, with its power to gather different perspectives and resources, has fueled innovative new products and services. For example, Spotify taps into collective intelligence to improve music recommendations through user-curated collaborative playlists. By allowing groups to jointly create playlists, such as at a party, Spotify crowdsources data on music preferences. It analyzes patterns in what audiences stream and like to share new song suggestions personalized to each listener's taste. Spotify also crowdsources descriptive metadata about songs through user-submitted information that undergoes a consensus-based review. Crowdfunding platforms like Kickstarter utilize the power of crowdsourcing to turn creative ideas into reality. By allowing entrepreneurs to pitch ideas to an enormous audience, promising innovations can get democratically funded by many small supporters rather than relying on a few large investors. This facilitates inventors and creators accessing the capital they need to initiate projects that may otherwise never materialize without public support. In short, crowdsourcing mechanisms enable innovations like algorithm-personalized music libraries and creator-owned projects that can uniquely serve user needs\n",
     "\n",
-    "![crowdsourcing2](crowdsourcing2.jpg)"
+    "![crowdsourcing2](https://files.catbox.moe/qiz6jr.jpeg)"
    ]
   },
   {
@@ -127,7 +129,7 @@
     "\n",
     "4. In microtask crowdsourcing, tasks are broken down into small units for contributors to complete. Explain how platforms like Amazon Mechanical Turk utilize microtask crowdsourcing. Discuss one advantage and one challenge associated with the microtask approach.\n",
     "\n",
-    "5. Explore Kaggle and find a database that would be useful for a CPT Project idea you have. Briefly discuss its potential purpose in your project. (1-2 sentences)"
+    "5. Explore Kaggle and find a database that would be useful for a CPT Project idea you have. Briefly discuss its potential purpose in your project."
    ]
   }
  ],
