--- a/_notebooks/2023-12-14-Class_6_Crowdsourcing.ipynb
+++ b/_notebooks/2023-12-14-Class_6_Crowdsourcing.ipynb
@@ -23,13 +23,13 @@
     "\n",
     "![Crowdsourcing](https://files.catbox.moe/u9c5bk.jpeg)\n",
     "\n",
-    "### What is Crowd-sourcing?\n",
+    "## What is Crowd-sourcing?\n",
     "\n",
     "Crowd-sourcing is a way of getting help, ideas, or contributions from a large group of people, often through the internet. Instead of relying on a few experts or individuals, crowd-sourcing taps into the collective knowledge, skills, and efforts of a diverse crowd to solve problems, gather information, or create content. This is one way of preventing Computer Bias. \n",
     "\n",
     "![Crowdsourcing Types](https://files.catbox.moe/9efbro.webp)\n",
     "\n",
-    "### Types of Crowd-sourcing\n",
+    "## Types of Crowd-sourcing\n",
     "\n",
     "There are several different types of crowd-sourcing:\n",
     "- Idea Crowdsourcing: Idea crowdsourcing is a collaborative approach to generating creative solutions or innovations by soliciting ideas from a large group of individuals. ex. Companies might host idea competitions where employees or the public submit ideas for new products or process improvements. Online suggestion boxes allow users to contribute ideas and feedback for website improvements or feature enhancements.\n",
@@ -38,6 +38,15 @@
     "- Knowledge Crowdsourcing: Knowledge crowdsourcing involves tapping into the collective intelligence of a group to answer questions, solve problems, or provide expertise. ex. Online forums like Stack Exchange or Reddit, where users ask questions and receive answers from a community of experts.Collaborative wikis like Wikipedia, where contributors collectively create and edit content on a wide range of topics. \n",
     "- Open Source Development: Open source development refers to the collaborative creation and improvement of software, with the source code being made freely available to the public. ex. GitHub is a platform where developers contribute to open-source projects by submitting code, reporting issues, and collaborating with others. The Linux operating system is a notable example of a successful open-source project with contributions from a global community.\n",
     "We will be mainly focusing on Data Crowd-sourcing and Open Source Development"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Popcorn Hack\n",
+    "\n",
+    "Can you think of other uses for the different types of crowd-sourcing?"
    ]
   },
   {
@@ -78,7 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Public Data Sets:\n",
+    "## Public Data Sets:\n",
     "\n",
     "Public data sets are raw data that governments, academic institutions, and other organizations make freely available to the public. By providing open access to massive stores of data, public data sets power innovation through crowdsourcing. Essentially, they present an opportunity for crowd wisdom to uncover insights and solutions that large organizations cannot achieve alone.\n",
     "\n",
@@ -90,7 +99,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Distributed Computing:\n",
+    "## Distributed Computing:\n",
     "\n",
     "\n",
     "Distributed computing platforms allow the public to donate their spare computing power to advance scientific research through crowdsourcing. An example is Folding@Home, created by Stanford University, which focuses on simulating protein folding to better understand diseases like cancer. The project sends out small computational protein folding simulations to volunteers' personal devices. Results get sent back to contribute toward a massive aggregated analysis. At its peak, Folding@Home even utilized PlayStation 3 consoles toward this goal. A similar initiative is BOINC, coordinated by UC Berkeley, which crowdsources simulations for projects ranging from math to astrophysics. For example, BOINC's Minecraft@Home sends out Minecraft world seeds to volunteers, who develop simulated versions of those worlds on their computers to send back data. While more of an experimental endeavor, Minecraft@Home demonstrates how crowdsourced computing can be leveraged creatively. By using collective resources, these platforms enable complex problems to be tackled that would not be feasible by any single system."
@@ -100,12 +109,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Innovations:\n",
+    "## Innovations:\n",
     "\n",
     "\n",
     "Crowdsourcing, with its power to gather different perspectives and resources, has fueled innovative new products and services. For example, Spotify taps into collective intelligence to improve music recommendations through user-curated collaborative playlists. By allowing groups to jointly create playlists, such as at a party, Spotify crowdsources data on music preferences. It analyzes patterns in what audiences stream and like to share new song suggestions personalized to each listener's taste. Spotify also crowdsources descriptive metadata about songs through user-submitted information that undergoes a consensus-based review. Crowdfunding platforms like Kickstarter utilize the power of crowdsourcing to turn creative ideas into reality. By allowing entrepreneurs to pitch ideas to an enormous audience, promising innovations can get democratically funded by many small supporters rather than relying on a few large investors. This facilitates inventors and creators accessing the capital they need to initiate projects that may otherwise never materialize without public support. In short, crowdsourcing mechanisms enable innovations like algorithm-personalized music libraries and creator-owned projects that can uniquely serve user needs\n",
     "\n",
     "![crowdsourcing2](https://files.catbox.moe/qiz6jr.jpeg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Popcorn Hacks\n",
+    "\n",
+    "Can you think of any drawbacks of crowdsourcing?"
    ]
   },
   {
